# fenics_arclength

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  environment.yml  environment_fenics.yml  environment_others.yml  pyproject.toml  setup.py
arc_length/: displacement_control_solver.py  force_control_solver.py  rotation_parametrization.py
docs/: requirements.txt
docs/source/: arc_length_displacement.rst  arc_length_force.rst  conf.py  index.rst  math_prelim.rst  modules.rst  nb_displacement.rst
docs/source/examples/displacement_control/: Bilayer_wrinkling.ipynb  voronoi.xdmf
docs/source/examples/force_control/beam/: README.md  README.rst
docs/source/examples/force_control/continuum/: leeframe_fenics_arclength_continuum.ipynb
docs/source/force_control/beam/: README.md
docs/source/notebooks/: Bilayer.nblink
examples/displacement_control/: Bilayer_wrinkling.ipynb  voronoi.h5  voronoi.xdmf
examples/force_control/beam/: README.md
examples/force_control/beam/beam_2D/: arch215_fenics_arclength_New.ipynb  leeframe_fenics_arclength.ipynb  leeframe_fenics_arclength_New.ipynb
examples/force_control/beam/beam_2D/lit_soln/: solution_215.mat
examples/force_control/beam/beam_3D/: rotation_parametrization.py
examples/force_control/continuum/: leeframe_fenics_arclength_continuum.ipynb  test.h5  test.msh  test.xdmf
fenics_arclength.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
joss/: joss_arclength.eps  paper.bib  paper.md
validation/: validate_3Dbeamlarge.py  validate_3Dbeamsmall.py  validate_bilayer.py  validate_leeframe.py
(+14 files in other folders)
